feat(email): email portion completed...
