# server/src/services/mail.service.ts
@@ -1,10 +1,19 @@
 const nodemailer = require('nodemailer');
-import { IMail } from '../models';
+import {
+  IMail,
+  IMailDocument,
+  MailModel,
+  RecurringEnum,
+  SentMailModel,
+} from '../models';
+import * as moment from 'moment';
+import * as scheduler from 'node-schedule';
 
+var utcOffset = moment().utcOffset();
 export class MailService {
-  constructor() {}
-
-  async sendMail(options) {
+  async sendMail(options: any) {
+    console.log('mail', options);
+    return;
     const transporter = nodemailer.createTransport({
       service: process.env.SERVICE,
       auth: {
@@ -23,10 +32,103 @@ export class MailService {
 
     transporter.sendMail(mailOptions, function (error, info) {
       if (error) {
-        return error;
+        console.log(error);
       } else {
-        return info.response;
+        console.log(info.response);
       }
     });
+  }
+
+  async createMail(mail: IMail) {
+    const createdMail = await MailModel.create(mail);
+    this.scheduleMail(createdMail);
+    return createdMail;
+  }
+
+  async scheduleMail(mail: IMailDocument) {
+    const preparedScheduled = this.mailScheduleTime(mail);
+    preparedScheduled.forEach((schedule) => {
+      // console.log(schedule, typeof schedule)
+      console.log(new Date(schedule));
+      scheduler.scheduleJob(new Date(schedule), () => {
+        this.triggerMail(mail);
+        console.log(moment().format('LLLL'), 'Mail triggered');
+      });
+    });
+  }
+
+  mailScheduleTime(mail: IMailDocument) {
+    const currentDateTime = moment();
+    const preparedScheduled: string[] = [];
+    const rec = mail.recurrence;
+    if (rec.type === RecurringEnum.Seconds) {
+      let tempDateTimeUnix = moment().unix();
+      const tillDateTimeUnix = moment()
+        .add(1, 'days')
+        .set({ hour: 0, minute: 0, second: 0, millisecond: 0 })
+        .unix();
+      while (tillDateTimeUnix > tempDateTimeUnix) {
+        tempDateTimeUnix += Number(rec.afterSeconds);
+        preparedScheduled.push(moment.unix(tempDateTimeUnix).toLocaleString());
+      }
+    } else if (rec.type === RecurringEnum.Weekly) {
+      const time = String(rec.time).split(':');
+      const scheduledTime = moment().set({
+        hours: Number(time[0]),
+        minutes: Number(time[1]),
+        seconds: 0,
+      });
+      if (
+        rec.day === currentDateTime.get('day') &&
+        currentDateTime.unix() < scheduledTime.unix()
+      ) {
+        preparedScheduled.push(
+          moment.unix(scheduledTime.unix()).toLocaleString()
+        );
+      }
+    } else if (rec.type === RecurringEnum.Monthly) {
+      const time = String(rec.time).split(':');
+      const scheduledTime = moment().set({
+        hours: Number(time[0]),
+        minutes: Number(time[1]),
+        seconds: 0,
+      });
+      if (
+        rec.date === currentDateTime.get('date') &&
+        currentDateTime.unix() < scheduledTime.unix()
+      ) {
+        preparedScheduled.push(
+          moment.unix(scheduledTime.unix()).toLocaleString()
+        );
+      }
+    } else if (mail.recurrence.type === RecurringEnum.Yearly) {
+      const time = String(rec.time).split(':');
+      const scheduledTime = moment().set({
+        hours: Number(time[0]),
+        minutes: Number(time[1]),
+        seconds: 0,
+      });
+      if (
+        rec.month === currentDateTime.get('month') &&
+        rec.date === currentDateTime.get('date') &&
+        currentDateTime.unix() < scheduledTime.unix()
+      ) {
+        preparedScheduled.push(
+          moment.unix(scheduledTime.unix()).toLocaleString()
+        );
+      }
+    }
+
+    return preparedScheduled;
+  }
+
+  async setDaySchedules() {
+    const mails = await MailModel.find();
+    // mails.forEach((mail) => this.scheduleMail(mail));
+  }
+
+  async triggerMail(mail: IMailDocument) {
+    this.sendMail(mail);
+    SentMailModel.create({ email: mail });
   }
 }
